--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Julius Pepperwood
 ###############################################
 
 navbar-links:
-  Support Me: "https://www.buymeacoffee.com/pepperwood"
+  # Support Me: "https://www.buymeacoffee.com/pepperwood"
 
 ################
 # --- Logo --- #
